--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.12.3",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@primer/primitives": "2.0.0",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
